[package]
name = "win_gui_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
windows = { version = "0.51.1", features = [
  "Win32_Foundation", 
  "Win32_System_LibraryLoader",
  "Win32_UI_HiDpi", 
  "Win32_UI_WindowsAndMessaging", 
  "Win32_Graphics_Gdi",
] }
